...
        }
    }

    private var title: String {
        switch type {
        case .card: return "Card details"
        case .ach: return "Bank account"
        case .applePay: return "Apple Pay"
        case .tapToPay: return "Tap to Pay"
        }
    }

    @ViewBuilder
...
